# ai-firewall

./: .dockerignore  .gitignore  Apache LICENSE 2.0  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
configs/: ai-firewall.conf.example
deploy/grafana/dashboards/: ai-cost-firewall-dashboard.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: prometheus.yml
docs/: architecture.md  config-reference.md  faq.md  how-it-works.md  quickstart.md
security/: cosign.pub
src/: app.rs  config.rs  error.rs  main.rs  metrics.rs
src/api/: chat.rs  mod.rs
src/cache/: exact.rs  mod.rs  redis_exact.rs
src/core/: hashing.rs  mod.rs  normalize.rs  pricing.rs
src/embeddings/: mod.rs  openai.rs  provider.rs
src/semantic/: mod.rs  noop.rs  qdrant.rs  semantic_cache.rs
src/services/: chat_service.rs  mod.rs
src/types/: mod.rs  openai.rs  semantic.rs
src/upstream/: llm.rs  mod.rs  openai.rs
