[package]
name = "ai-firewall"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

prometheus = "0.14"
once_cell = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

tower-http = { version = "0.6", features = ["trace"] }

async-trait = "0.1"
qdrant-client = "1.17"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

sha2 = "0.10"
hex = "0.4"

anyhow = "1"
thiserror = "2"
dotenvy = "0.15"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
